# ai-for-all

./: .gitignore  ARCHITECTURE.md  README.md
backend/: .env.example  EXAMPLES.md  README.md  REFACTORING_COMPLETED.md  REFACTOR_GUIDE.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/dependencies/: __init__.py  supabase.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: health.py
backend/app/services/: __init__.py
frontend/: .env.example  .eslintrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/pages/: HomePage.tsx
