[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-learning-backend"
version = "0.1.0"
description = "FastAPI backend for the AI learning platform."
authors = [{ name = "AI Platform Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",
    "supabase>=2.3.1",
    "python-dotenv>=1.0.0"
]

[tool.uvicorn]
factory = false
reload = true
app = "app.main:app"
host = "0.0.0.0"
port = 8000
